--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,11 +8,12 @@ SOURCES = \
 	ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
 	ft_putendl_fd.c ft_putnbr_fd.c ft_printf.c put_pointer_addr.c putnbr_base.c \
 	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
+	ft_free_tab.c \
 	ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c get_next_line_utils.c get_next_line.c
 OBJECTS = $(SOURCES:.c=.o)
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g
 
 all: $(NAME)
 
